<resources>
    <string name="app_name">Ticket Master</string>
    <string name="wish_title">My Wish List</string>
    <string name="searchInput">Search events</string>
    <string name="searchTitle">Event Search</string>
    <string name="caBTN">Canada</string>
    <string name="usBTN">US</string>
    <string name="cart_title">Cart Activity</string>
    <string name="category_title">Categories</string>
    <string name="addCart">Add to Cart</string>
    <string name="addFavs">Add to Wish List</string>
    <string name="searchAlert">Add Event</string>
    <string name="searchAlertWishMsg">Add event to wish list?</string>
    <string name="searchAlertCartMsg">Add event to cart?</string>
    <string name="alertNo">NO</string>
    <string name="alertYes">Hell yes!</string>
    <string name="searchToast">Event loaded</string>
    <string name="searchUndo">Undo</string>
    <string name="searchSnack">Event added</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="searchRemove">Event removed</string>
    <string name="wishAlertDeleteMsg">Remove from wish list?</string>
    <string name="wishAlert">Modify Event</string>
    <string name="eventFree">Free</string>
    <string name="emptySearch">Search bar empty</string>
    <string name="navSearch">Search Events</string>
    <string name="navWish">Wish List</string>
    <string name="navCart">Cart Activity</string>
    <string name="navCategories">Categories</string>
    <string name="search_event">Search Events</string>
    <string name="events_wish_list">Event Wish List</string>
    <string name="my_event_list">Event Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alert_message">How to use this APP? Click country button to switch events list of different country. </string>
    <string name="dialog_title">Instruction</string>
    <string name="alert_cancel">CLOSE</string>
    <string name="alert_confirm">GOT IT</string>
    <string name="menu_item_help">HELP</string>
    <string name="addItem_status">Event Added.</string>
    <string name="addToStar">Add To Star</string>
    <string name="extended_fab_content_desc">ADD ITEM TO STAR</string>
    <string name="extended_fab_label">ADD TO STAR</string>
    <string name="fab_content_desc">add to star</string>
    <string name="submit">add to star</string>
    <string name="addStarBtn">ADD</string>
    <string name="alert_message_del_item">Do you want to delete this item?</string>
    <string name="dialog_title_starList">Hello</string>
    <string name="delItem_status">Event Deleted.</string>
    <string name="title_activity_ndtest">NDTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ND_home">HOME</string>
    <string name="ND_wishList">WISH LIST</string>
    <string name="ND_starList">STAR LIST</string>
    <string name="ND_BC">BROWSE CATEGORY</string>
    <string name="communications">communications</string>
    <string name="toolbar_welcome">WELCOME TICKETMASTER V1.0</string>
    <string name="musicBTN">MUSIC</string>
    <string name="backBtn">BACK</string>
    <string name="buyBtn">BUY</string>
    <string name="eventTitle">Event</string>
    <string name="helpMessage">Search for various events, browse by category, and add events to your wish list or cart!</string>
    <string name="chris">Event Search - Chris V1</string>
    <string name="jeongmi">Wish List - Jeong Mi V1</string>
    <string name="taeyeon">Cart Activity - Taeyeon V1</string>
    <string name="di">Browse Categories - Di V1</string>
    <string name="subList_title">Recommendation for just you</string>
</resources>