<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/first_item"
        android:orderInCategory="100"
        android:title="@string/chris"
        app:showAsAction="never"
        android:icon="@drawable/search_w"/>
    <item
        android:id="@+id/second_item"
        android:orderInCategory="200"
        android:title="@string/jeongmi"
        app:showAsAction="never"
        android:icon="@drawable/favs_w" />
    <item
        android:id="@+id/third_item"
        android:orderInCategory="300"
        android:title="@string/taeyeon"
        app:showAsAction="never"
        android:icon="@drawable/cart_w" />
    <item
        android:id="@+id/fourth_item"
        android:orderInCategory="400"
        android:title="@string/di"
        app:showAsAction="never"
        android:icon="@drawable/categories_w"/>

</menu>