<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/wishList"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corner_main"
        android:scaleType="fitCenter"
        android:src="@drawable/favs_r"
        android:text="@string/events_wish_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp" />

    <ImageButton
        android:id="@+id/myEvent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corner_main"
        android:scaleType="fitCenter"
        android:src="@drawable/cart_y"
        android:text="@string/my_event_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishList"
        android:padding="20dp" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/round_corner_main"
        android:scaleType="fitCenter"
        android:src="@drawable/search"
        android:text="@string/search_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp" />

    <ImageButton
        android:id="@+id/searchCategories"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_corner_main"
        android:scaleType="fitCenter"
        android:src="@drawable/categories_w"
        android:text="Browse Categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:padding="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
