<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowSoftInputMode="stateHidden"
    android:orientation="vertical">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title=""
        app:title="" />

    <ProgressBar
        android:id="@+id/progressBar0"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/event_image"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/event_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_minPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/event_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/ticket_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="quantity?"
                    android:textSize="14dp"
                    android:inputType="numberSigned"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />


            </TableRow>


            <TableRow
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/backBtn"
                    android:layout_margin="16dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/addStarBTN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addStarBtn"
                    android:layout_margin="16dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buyBtn"
                    android:layout_margin="16dp"
                    android:layout_weight="1" />

            </TableRow>



        </TableLayout>



        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_menu"
            app:headerLayout="@layout/header_layout"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>



</LinearLayout>

